@@ -1,54 +1,77 @@
 package com.recipe.controller;
 
+import javax.validation.Valid;
+
+import org.springframework.http.HttpStatus;
 import org.springframework.stereotype.Controller;
 import org.springframework.ui.Model;
+import org.springframework.validation.BindingResult;
+import org.springframework.web.bind.annotation.ExceptionHandler;
+import org.springframework.web.bind.annotation.GetMapping;
 import org.springframework.web.bind.annotation.ModelAttribute;
 import org.springframework.web.bind.annotation.PathVariable;
 import org.springframework.web.bind.annotation.PostMapping;
-import org.springframework.web.bind.annotation.RequestMapping;
+import org.springframework.web.bind.annotation.ResponseStatus;
+import org.springframework.web.servlet.ModelAndView;
 
 import com.recipe.command.RecipeCommand;
-import com.recipe.service.RecipeServiceImpl;
+import com.recipe.exception.NotFoundException;
+import com.recipe.service.RecipeService;
 
 @Controller
 public class RecipeController {
+	private static final String RECIPE_RECIPEFORM_URL = "recipe/recipeform";
+	private final RecipeService recipeService;
 
-	private RecipeServiceImpl recipeService;
+	public RecipeController(RecipeService recipeService) {
+		this.recipeService = recipeService;
+	}
 
-    public RecipeController(RecipeServiceImpl recipeService) {
-        this.recipeService = recipeService;
-    }
+	@GetMapping("/recipe/{id}/show")
+	public String showById(@PathVariable String id, Model model) {
+		model.addAttribute("recipe", recipeService.findById(new Long(id)));
+		return "recipe/show";
+	}
 
-    @RequestMapping(path = "recipe/show/{id}")
-    public String getRecipeById(@PathVariable String id, Model model) {
-        model.addAttribute("recipe", recipeService.getRecipeById(new Long(id)));
-        return "recipe/show";
-    }
+	@GetMapping("recipe/new")
+	public String newRecipe(Model model) {
+		model.addAttribute("recipe", new RecipeCommand());
+		return "recipe/recipeform";
+	}
 
-    @RequestMapping(path = "recipe/new")
-    public String newRecipeForm(Model model) {
-        RecipeCommand recipeCommand = new RecipeCommand();
-        model.addAttribute("recipe", recipeCommand);
-        return "recipe/recipeform";
-    }
+	@GetMapping("recipe/{id}/update")
+	public String updateRecipe(@PathVariable String id, Model model) {
+		model.addAttribute("recipe", recipeService.findCommandById(Long.valueOf(id)));
+		return RECIPE_RECIPEFORM_URL;
+	}
 
-    @PostMapping("recipe")
-    public String saveOrUpdate(@ModelAttribute RecipeCommand recipeCommand) {
-        RecipeCommand savedRecipeCommand = recipeService.saveRecipeCommand(recipeCommand);
-        return "redirect:/recipe/show/" + savedRecipeCommand.getId();
-    }
+	@PostMapping("recipe")
+	public String saveOrUpdate(@Valid @ModelAttribute("recipe") RecipeCommand command, BindingResult bindingResult) {
+		if (bindingResult.hasErrors()) {
+			bindingResult.getAllErrors().forEach(objectError -> {
+				System.out.println(objectError.toString());
+			});
+			return RECIPE_RECIPEFORM_URL;
+		}
+		RecipeCommand savedCommand = recipeService.saveRecipeCommand(command);
+		return "redirect:/recipe/" + savedCommand.getId() + "/show";
+	}
 
-    @RequestMapping(path = "recipe/update/{id}")
-    public String updateRecipeForm(@PathVariable String id,  Model model) {
-        RecipeCommand recipeCommand = recipeService.getRecipeCommandById(new Long(id));
-        model.addAttribute("recipe", recipeCommand);
-        return "recipe/recipeform";
-    }
-    
-    @RequestMapping(path = "recipe/delete/{id}")
-    public String deleteRecipe(@PathVariable String id) {
-        recipeService.deleteRecipeById(new Long(id));
-        return "redirect:/";
-    }
-    
+	@GetMapping("recipe/{id}/delete")
+	public String deleteById(@PathVariable String id) {
+		recipeService.deleteById(Long.valueOf(id));
+		return "redirect:/";
+	}
+
+	@ResponseStatus(HttpStatus.NOT_FOUND)
+	@ExceptionHandler(NotFoundException.class)
+	public ModelAndView handleNotFound(Exception exception) {
+		ModelAndView modelAndView = new ModelAndView();
+
+		modelAndView.setViewName("404error");
+		modelAndView.addObject("exception", exception);
+
+		return modelAndView;
+	}
+
 }
